--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-  <title>Gesundo24</title>
+  <title>Gesundo24DE</title>
   <meta name="description"
     content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
-  <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
+  <meta name="keywords" content="alternative medicine" />
   <meta name="author" content="Minimal UI Kit" />
 </head>
 
